Updatesd co-counties.sql to include other setup tables.